[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-draft-tool"
version = "0.1.0"
description = "League of Legends draft data tooling"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "psycopg[binary]",
    "psycopg_pool",
    "fastapi[standard]",
]

[project.scripts]
ldt-init-db = "backend.cli.init_db:main"
ldt-daily-maintenance = "backend.cli.daily_maintenance:main"
ldt-update-challengers = "backend.cli.update_challengers:main"
ldt-run-match-sync = "backend.cli.run_match_sync:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.fastapi]
entrypoint = "backend.main:app"